fix tech layout issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -78,10 +78,6 @@ h1 {
 .nav-list > li > a {   /* Targeting all the a(links) of my nav-list */
   text-decoration: none;
 }
-.nav-list > li > a.current-page {
-  content: '';
-  /* outline: solid 1px red; */
-}
 
 /* Trying out pseudo elements to mark my current page  */
 .nav-list > li > a.current-page::before {
@@ -152,7 +148,6 @@ div[class^="blk-"] { /* Playing with [attribute^=value] selector to target both 
 }
 
 .home-content, .sprints-content {
-/* .content { */
   background-color: #DFDFDE;
   min-width: 70vw;
   display: flex;
@@ -309,6 +304,14 @@ div[class^="card-image-wrap-"] {
 }
 
 /*- Tech content ---------------------------------------------------------- */
+.sprints-main {
+  background-color: var(--background-clr);
+  width: 70vw;
+  height: auto;
+  margin: auto;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+}
 
 .sprint-title {
   background-color: var(--title-clr);
@@ -320,12 +323,10 @@ div[class^="card-image-wrap-"] {
   padding: 0.5rem;
   transform: translateX(-50%);
 }
-
 h2 { 
   font-size: var(--big-font);
   text-align: center;
 }
-
 .sprint-topic {
   background-color: var(--second-background-clr);
   padding: 0.5rem;
@@ -335,8 +336,6 @@ h2 {
   border-radius:  25px/25px;
   margin: 1rem auto;
 }
-
-
 h3 { 
   font-size: var(--bigish-font);
   text-align: center;
